ilivalidator 1.1.0 (2017-04-xx)
-----------------------------
- new option --forceTypeValidation (#41)

ilivalidator 1.0.0 (2017-03-10)
-----------------------------
- iox-ili 1.14.0-feature/validator1 (2017-03-10)
- validator: changed API of user defined functions
- validator: added: validate plausibility constraints
- validator: added: evaluate user defined functions
- validator: added: enable user defined error messages
- validator: added: get message in specific validation if configuration off
- validator: fixed: unique constraint not checked
- validator: fixed: custom functions with object collections
- validator: fixed: missed errors in xtf log file
- validator: fixed: evaluation of sub-enum constants
- validator: improved/fixed topology validation
- validator: optimized: validate external/additional constraint
- validator: optimized: performance

ilivalidator 0.10.0 (2017-02-10)
-----------------------------
- iox-ili 1.14.0-feature/validator1
- validator: optimized unique TID/OID check
- validator: added functions len, lenM, trim, trimM, isEnumSubVal, inEnumRange, objectCount(ALL),
			 objectCount(Role), elementCount, myClass, isOfClass, isSubClass, areArea
- validator: added handling if function is not yet implemented
- validator: added set constraints
- validator: added infoLogs and traceLogs
- validator: added additional constraints

ilivalidator 0.9.0 (2017-01-13)
----------------------------------------------
- iox-ili-1.14.0-feature/validator1
- validator: optimized unique TID/OID check
- validator: optimized performance
- validator: added AREA/SURFACE topology validation
- validator: added switch off existence, mandatory constraints and return warning instead of alert
- validator: added switch off attribute cardinality and return warning instead of alert
- validator: added role handling if role is EXTERNAL

ilivalidator 0.7.0 (2016-12-29)
----------------------------------------------
- iox-ili-1.13.7-feature/validator1