@@ -112,6 +112,9 @@ Optionen:
 | ``--forceTypeValidation``     | Ignoriert die Konfiguration der Typprüfung aus der TOML-Datei, d.h. es kann nur die Multiplizität aufgeweicht werden.                                                                                                                                                                                                                                                                                                                                                                                                                      |
 |                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 +-------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
+| ``--disableAreaValidation``   | Schaltet die AREA Topologieprüfung aus.                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                    |
+|                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
++-------------------------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 | --modeldir path               | Dateipfade, die Modell-Dateien (ili-Dateien) enthalten. Mehrere Pfade können durch Semikolon ‚;‘ getrennt werden. Es sind auch URLs von Modell-Repositories möglich. Default ist                                                                                                                                                                                                                                                                                                                                                           |
 |                               |                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                            |
 |                               | %XTF\_DIR;http://models.interlis.ch/;%JAR\_DIR                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             |
